2003-07-30  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c: all *-INTERNAL functions
	call structure BOA constructors (thus they are not INTERNAL)
	* modules/syscalls/posix.lisp: all structures have BOA
	constructors, removed the wrappers

2003-07-30  Sam Steingold  <sds@gnu.org>

	* genclisph.d (charp): enabled
	* modules/syscalls/calls.c (FILE-INFO, MAKE-SHORTCUT)
	(SHORTCUT-INFO) [WIN32_NATIVE, UNIX_CYGWIN32]: new functions
	* modules/syscalls/posix.lisp (file-info, shortcut-info)
	[WIN32_NATIVE, UNIX_CYGWIN32]: new structures
	* install.bat: run the full linking set
	* install.lisp: create a shortcut

2003-07-29  Sam Steingold  <sds@gnu.org>

	* genclisph.d (to_time_t_) [UNIX_CYGWIN32]: export
	* modules/dirkey/dirkey.c (to_time_t_) [UNIX_CYGWIN32]: moved to...
	* unixaux.d (to_time_t_) [UNIX_CYGWIN32]: here

2003-07-29  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): when non-interactive, guard LOAD for "-i" with
	SYS::BATCHMODE-ERRORS to avoid infinite loop on error

2003-07-28  Sam Steingold  <sds@gnu.org>

	pushSTACK(listof()) and STACK_1=listof() are illegal because
	listof() (and vectorof() &c) modify the STACK,
	so the whole expression becomes undefined!
	* control.d (SET): avoid undefined expressions
	* array.d (test_displaced, ADJUST-ARRAY): ditto
	* eval.d (interpret_bytecode_): ditto
	* pathname.d (directory_search_scandir): ditto
	* socket.d (SOCKET-SERVICE-PORT): ditto

2003-07-28  Stefan Kain  <stefan.kain@freenet.de>

	* flo_rest.d: translated all comments

2003-07-28  Sam Steingold  <sds@gnu.org>

	* pathname.d (directory_search) [WIN32_NATIVE]: save some consing
	(directory_search_scandir) [WIN32_NATIVE]: fixed a GC-safety bug:
	use O(lnk_string) instead of allocating a new string each time
	* constobj.d (lnk_string) [WIN32_NATIVE]: new string

2003-07-28  Sam Steingold  <sds@gnu.org>

	* misc.d (clisp_setenv) [WIN32_NATIVE]: use SetEnvironmentVariable()
	(GETENV) [WIN32_NATIVE]: use GetEnvironmentStrings() and